testsuite/tests/rep-poly/T23505.hs
module M where

import GHC.Exts

f = f :: (_ :: TYPE r)
